--- a/ecg-models.ipynb
+++ b/ecg-models.ipynb
@@ -1095,13 +1095,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Whiteness Test"
+    "## Diagnostic Checks"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 43,
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [
     {
      "data": {
@@ -1123,6 +1125,84 @@
     "fig = model_1.plot_diagnostics()\n",
     "fig.set_size_inches(18.5, 10)\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Heteroskedasticity"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[8.29412424e+00, 3.87185414e-85]])"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "##############################\n",
+    "# Heteroskedasticity Tests\n",
+    "##############################\n",
+    "model_1.test_heteroskedasticity(None)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Normality"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[8.52148815e+05, 0.00000000e+00, 8.07221357e+00, 1.32546647e+02]])"
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "##############################\n",
+    "# Normality Tests\n",
+    "##############################\n",
+    "model_1.test_normality(None)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Serial Correlation of Residuals"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "##############################\n",
+    "# Serial Correlation Tests\n",
+    "##############################\n"
    ]
   },
   {
